syntax = "proto2";

package rv.protos;

import "rastervision/protos/raster_source2.proto";
import "rastervision/protos/label_source.proto";
import "rastervision/protos/label_store2.proto";

message SceneConfig {
    // The id is used by the experiment runner to generate output URIs.
    required string id = 4;

    required RasterSourceConfig raster_source = 1;

    // In order to generate training data from a scene, or to evaluate a
    // model on a scene, the ground_truth_label_source needs to be
    // specified.
    optional LabelSourceConfig ground_truth_label_source = 2;

    // In order to make a prediction on a scene, the
    // prediction_label_store needs to be specified.
    optional LabelStoreConfig prediction_label_store = 3;
}
